src/commands/top/ui/snapshots/zizq__commands__top__ui__tests__render_connecting.snap
---
source: src/commands/top/ui/mod.rs
expression: "render_to_string(&app, 60, 10)"
---
  Zizq 0.1.0
● Connecting... 127.0.0.1:8901





   In-Flight   Ready   Scheduled
                         ID   PRIORITY QUEUE              DU
 TabChange Tab iInfo pPause /Find DDelete qQuit
