src/commands/top/ui/snapshots/zizq__commands__top__ui__tests__render_empty_ready_tab.snap
---
source: src/commands/top/ui/mod.rs
expression: "render_to_string(&app, 120, 8)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: 1.0.0, Uptime: 10s
  Queue: 0 in-flight, 0 ready, 0 scheduled

  Depth[                                                                                                       0 jobs]
   In-Flight   Ready   Scheduled
 TabChange Tab iInfo pPause /Find DDelete qQuit
