src/commands/top/ui/snapshots/zizq__commands__top__ui__tests__render_free_tier_in_flight_tab_with_cap_message.snap
---
source: src/commands/top/ui/mod.rs
expression: "render_to_string(&app, 120, 12)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: 1.0.0, Uptime: 10s
  Queue: 2 in-flight, 5 ready, 0 scheduled
        ▼
  Depth[│││││││                                                                                                7 jobs]
        ▲
   In-Flight   Ready   Scheduled

                                         Display is currently capped at 10 jobs.
                                       Upgrade to a pro license to see everything.
 TabChange Tab iInfo pPause /Find DDelete qQuit
