src/commands/top/ui/snapshots/zizq__commands__top__ui__tests__render_in_flight_tab_narrow_scrolled_max.snap
---
source: src/commands/top/ui/mod.rs
expression: "render_to_string(&app, 80, 12)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: 1.0.0, Uptime: 2m
  Queue: 2 in-flight, 2 ready, 2 scheduled
        ▼
  Depth[││││││                                                         6 jobs]
        ▲
   In-Flight   Ready   Scheduled
UEUE              DURATION   ATTEMPTS TYPE
efault                  3s          1 generate_annual_report_email
illing               2m30s          3 charge_subscription
 TabChange Tab iInfo pPause /Find DDelete qQuit
